# graphics-applications-2019

./: .gitignore  .gitmodules  README.md
lab1/: CMakeLists.txt
lab1/src/: Equalization.cpp  Equalization.h  Fig.h  FigReader.cpp  FigReader.h  ImageProcessing.cpp  ImageProcessing.h  Matching.cpp  Matching.h  Plotter.cpp  Plotter.h  Stretching.cpp  Stretching.h  equalization.cpp  equalization.h  hist.cpp  hist.h  lab1.cpp  stretching.cpp  stretching.h
